/**
 * protobuf指令：
 * protoc --java_out=src\main\java  src\main\resources\protobuf\dataInfo.proto
 */
syntax = "proto2";

package protobuf;

option optimize_for = SPEED;
option java_package = "com.lichee.protobuf.example.dataInfo";
option java_outer_classname = "DataInfo";

message Data {

    enum DataType {
        PersonType = 1;
        DogType = 2;
        CatType = 3;
    }

    required DataType data_type = 1;

    oneof data_bady {
        Person person = 2;
        Dog dog = 3;
        Cat cat = 4;
    }
}

message Person {
    optional string name = 1;
    optional int32 age = 2;
    optional string address = 3;
}

message Dog {
    optional string name = 1;
    optional int32 age = 2;
}

message Cat {
    optional string name = 1;
    optional string city = 2;
}